--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <head>
+        <meta charset="utf-8">
+        <title> Homework 1 </title>
+    </head>
+    <body>
+Question 6
+    
+<table>
+<tr>
+<td> <a href="https://stat.tamu.edu/"> Texas A&M University Statistics Department</a> </td>
+<td> <img width = 250 src="Photo.jpg" /></td>
+</tr>
+<tr>
+<td> 
+<ul>
+<li> I graduated as a double major from Southern Methodist University in Mechanical Engineering and Mathematics.
+<li> Currently, pursuing a Master's in Statistical Data Science at Texas A & M University
+</ul> 
+</td>
+<td></td>
+</tr>
+</table>
 </body>
 </html>
